--- a/tags/templates/index.html
+++ b/tags/templates/index.html
@@ -31,11 +31,12 @@
 
 
 
-<meta name="generator" content="Hugo 0.57.2" />
+<meta name="generator" content="Hugo 0.68.3" />
 
 
 <link rel="canonical" href="https://kuperxu.github.io/tags/templates/" />
-<link href="%7balternate%20%7bRSS%20application/rss&#43;xml%20%20index%20alternate%20%20false%20false%20true%20false%20false%200%7d%20/tags/templates/index.xml%20https://kuperxu.github.io/tags/templates/index.xml%7d" rel="alternate" type="application/rss+xml" title="Jane - A super concise theme for Hugo" />
+<link href="/tags/templates/index.xml" rel="alternate" type="application/rss+xml" title="Jane - A super concise theme for Hugo" />
+
 
 
 
@@ -51,7 +52,7 @@
 
 
 
-<link rel="stylesheet" href="/sass/jane.min.af20b78e95c84de86b00a0242a4a77bd2601700e1b250edf27537d957ac0041d.css" integrity="sha256-ryC3jpXITehrAKAkKkp3vSYBcA4bJQ7fJ1N9lXrABB0=" media="screen" crossorigin="anonymous">
+<link rel="stylesheet" href="/sass/jane.min.fa3d941d1d0e0ddc985804227feabffea55c89883eb0af34e0532a7ae9135151.css" integrity="sha256-&#43;j2UHR0ODdyYWAQif&#43;q//qVciYg&#43;sK804FMqeukTUVE=" media="screen" crossorigin="anonymous">
 
 
 
@@ -61,12 +62,9 @@
 <meta property="og:description" content="Hugo theme jane example site." />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://kuperxu.github.io/tags/templates/" />
-
 <meta property="og:updated_time" content="2014-09-28T00:00:00+00:00" />
 <meta itemprop="name" content="templates">
-<meta itemprop="description" content="Hugo theme jane example site.">
-
-<meta name="twitter:card" content="summary"/>
+<meta itemprop="description" content="Hugo theme jane example site."><meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="templates"/>
 <meta name="twitter:description" content="Hugo theme jane example site."/>
 
@@ -148,10 +146,6 @@
             
               <li>
                 <a href="https://kuperxu.github.io/post/image-preview/">Image Preview</a>
-              </li>
-            
-              <li>
-                <a href="https://kuperxu.github.io/post/syntax-highlighting/">Syntax Highlighting</a>
               </li>
             
           </ul>
@@ -310,10 +304,6 @@
                 <a href="https://kuperxu.github.io/post/image-preview/">Image Preview</a>
               </li>
             
-              <li>
-                <a href="https://kuperxu.github.io/post/syntax-highlighting/">Syntax Highlighting</a>
-              </li>
-            
           </ul>
 
         
@@ -353,28 +343,6 @@
       <span class="archive-post-title">
         <a href="/post/creating-a-new-theme/" class="archive-post-link">
           Creating a New Theme
-        </a>
-      </span>
-    </div>
-  
-    <div class="archive-post">
-      <time datetime="2014-04-02" class="archive-post-time">
-        2014-04-02
-      </time>
-      <span class="archive-post-title">
-        <a href="/post/goisforlovers/" class="archive-post-link">
-          (Hu)go Template Primer
-        </a>
-      </span>
-    </div>
-  
-    <div class="archive-post">
-      <time datetime="2014-03-10" class="archive-post-time">
-        2014-03-10
-      </time>
-      <span class="archive-post-title">
-        <a href="/post/migrate-from-jekyll/" class="archive-post-link">
-          Migrate to Hugo from Jekyll
         </a>
       </span>
     </div>
@@ -494,7 +462,9 @@
 
   <span class="copyright-year">
     &copy;
-    2019
+    
+      2019 -
+    2020
     <span class="heart">
       
       <i class="iconfont">
@@ -539,6 +509,12 @@
 
 
 <script type="text/javascript" src="/js/main.638251f4230630f0335d8c6748e53a96f94b72670920b60c09a56fdc8bece214.js" integrity="sha256-Y4JR9CMGMPAzXYxnSOU6lvlLcmcJILYMCaVv3Ivs4hQ=" crossorigin="anonymous"></script>
+
+
+
+
+
+
 
 
 
